# MyRust

./: .gitignore  libp2p.md
actix-web/: Cargo.toml
actix-web/webservice/: .env  Cargo.toml
actix-web/webservice/src/: errors.rs  handlers.rs  main.rs  routers.rs  state.rs
app/: Learning.md  package-lock.json  package.json
app/src-tauri/src/: main.rs
app/src/components/: Greet.vue
axum-websocket-chat/: Cargo.toml  websocket.md
axum-websocket-chat/src/: handler.rs  main.rs  models.rs
db/: .env  Cargo.toml  db.sql
db/src/: main.rs
flappy/src/: main.rs  obstacle.rs  player.rs  state.rs
kv/: Cargo.toml  abi.proto
kv/src/: server.rs
kv/src/pb/: abi.rs  mod.rs
pow/: Cargo.toml
rustlings/: Cargo.toml
rustlings/.github/workflows/: lint.yml
rustlings/exercises/: quiz1.rs  quiz2.rs  quiz3.rs
rustlings/exercises/clippy/: clippy1.rs  clippy3.rs
rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors4.rs  errors5.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs
rustlings/exercises/generics/: generics1.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  (+1 more)
rustlings/src/: main.rs  run.rs
wasm-game-of-life/: Cargo.toml  after.txt  before.txt  package-lock.json  package.json
wasm-game-of-life/benches/: bench.rs
wasm-game-of-life/src/: lib.rs  utils.rs
wasm-game-of-life/tests/: web.rs
web/: Cargo.toml
web/httpserver/: Cargo.toml
(+67 files in other folders)
