[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.171", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
# openssl = { version = "0.10.55", features = ["vendored"] }
sqlx = { version = "0.7.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
