[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bytes = "1.4.0"
anyhow = "1.0.71"
tokio = {version = "1.28.2", features = ["full"]}
tokio-util = {version = "0.7.8", features = ["codec"]}
futures = "0.3.28"
prost = "0.11.9"
dashmap = "5.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.2"
async-trait = "0.1.68"
snow = "0.9.2"

[build-dependencies]
prost-build = "0.11.9"

